--- a/Thesis.tex
+++ b/Thesis.tex
@@ -85,7 +85,7 @@ I believe the analytical approach towards sonification is rather clear and well 
 
 That is why I would like to propose a division in this definition. There is one part of sonification world, described above --- that is, an analytical, `auditory display' world. My proposition adds \emph{an artistic world}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no longer looking for a scientific tool, but a sonic instrument, a source of inspiration and compositional data. It might also be described as a matter of aim behind the use of sonification methods: whether works are aimed to inform a listener or provide him an auditory display of some data, or whether they are used for their characteristic aesthetics.
 
-Use of streams of data for compositional and sound generating purposes is very familiar to electro-acoustic composers, artists and performers. Sonification in the artistic view is pushing the idea little further --- instead of algorithms, \emph{real world} data are used, although reaching their exact, understandable representation becomes additional or even insignificant, rather than essential. It might be, that there is a deeper meaning behind the selection of the data stream (when artist sees the action as political act), so it is important that the point I am describing is more theoretical --- real works are more often combining certain degree of aesthetics with conveying information through sound.
+Use of streams of data for compositional and sound generating purposes is very familiar to electro-acoustic composers, artists and performers. Sonification in the artistic view is pushing the idea a little farther --- instead of algorithms, \emph{real world} data are used, although reaching their exact, understandable representation becomes additional or even insignificant, rather than essential. It might be, that there is a deeper meaning behind the selection of the data stream (when artist sees the action as political act), so it is important that the point I am describing is more theoretical --- real works are more often combining certain degree of aesthetics with conveying information through sound.
 
 To give some real world examples, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
 
@@ -97,11 +97,11 @@ Geiger counter can be also viewed as representation of a sub-method of sonificat
 
 Audification is sonification simplified to the most basic level. The majority of the common real-time sonifications are then audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happen on the data are changes of the playback speed.
 
-One of the most interesting sonification works is the work of Christina Kubisch~\cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction, even though there is a wider spectrum of artists using the same tools. She generally appears as the icon of the method, so it will not be different in this thesis. Kubisch is a German sound artist born in 1948. She studied classical instruments such as flute and piano, but later turned to studying electronics at the Technical Institute of Milan. Since than she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention --- Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be to find interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
+One of the most interesting sonification works is the work of Christina Kubisch~\cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction, even though there is a wider spectrum of artists using the same tools. She generally appears as the icon of the method, so it will not be different in this thesis. Kubisch is a German sound artist born in 1948. She studied classical instruments such as flute and piano, but later turned to studying electronics at the Technical Institute of Milan. Since then she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention --- Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be to find interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
 
-Induction coils act as antennas and natural amplifiers, which when in the right setting, can provide excellent tools for electromagnetic sensing. Alternating current (AC) oscillations of the electromagnetic field are inducted on the coil, thusly creating AC signal. This AC signal is than amplified and can be directly treated with any audio devices as sound. It is an oscillation, similar to the signal produced by oscillators.
+Induction coils act as antennas and natural amplifiers, which when in the right setting, can provide excellent tools for electromagnetic sensing. Alternating current (AC) oscillations of the electromagnetic field are inducted on the coil, thusly creating AC signal. This AC signal is then amplified and can be directly treated with any audio devices as sound. It is an oscillation, similar to the signal produced by oscillators.
 
-I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see fig.~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and it is powerful enough to drive headphones. Its main benefit is size and portability, ideal for an electromagnetic sonic explorations. The version 1.0 used a tape head which I have extracted from an old tape player as the induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with a low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were, in the previous century, used for noise-less recordings of telephone calls by means of attaching the with suction cups to telephone headsets. 
+I have designed a simple pocket amplifier for these purposes called \textbf{Eletrosluch} (see fig.~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and it is powerful enough to drive headphones. Its main benefit is size and portability, ideal for an electromagnetic sonic explorations. The version 1.0 used a tape head which I have extracted from an old tape player as the induction coil. The amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with a low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were, in the previous century, used for noise-less recordings of telephone calls by means of attaching the with suction cups to telephone headsets. 
 
 \begin{figure}  
   \centering
@@ -112,7 +112,7 @@ I have designed a simple pocket amplifier for this purposes called \textbf{Eletr
 
 Probably closest to my network sonificiation work is the one by Michael Chinen  and Shintaro Miyazaki's Institute for Algorhytmics. 
 
-Michael Takezo Chinen is an American programer. He studied computer science and composition at University of Washington, Tokyo Denki University and Dartmouth College with Richard Karpen, Charles Dodge and Naotoshi Osaka. He was part of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in the sense of a method as in sense of a target. His proof to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail.~\cite{mchinen}
+Michael Takezo Chinen is an American programer. He studied computer science and composition at University of Washington, Tokyo Denki University and Dartmouth College with Richard Karpen, Charles Dodge and Naotoshi Osaka. He was part of the developers of the popular open source audio editing software Audacity. His artistic focus resides in software sonification, in the sense of a method as in sense of a target. His proof to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail.~\cite{mchinen}
 
 Both \emph{lstn} and \emph{FuckingWebBrowser} are based around sonification of computer based streams and data. To be more precise, lstn is \emph{``a program that sonifies real-time debugging data of other programs''} and FuckingWebBrowser is \emph{``simple mac web browser with memory sonification based on WebKit''}~\cite{Chinen2010, Chinen2010a}.
 
@@ -164,7 +164,7 @@ As a part of my own experimentation with untraditional sources for musical or ge
 
 To describe the process in higher detail, I would like to define some basic terms of the technical side of the project first, and then continue by describing my point of view on an even more important artistic side.
 
-I will start with packets and packet analyzers, since they are key elements of my wireless network sonification efforts. Packets, and in this case \emph{network packets} are units of formatted data. It is basically a standard of packing a predefined amount of information into a understandable format, easily and efficiently transmittable over networks. \emph{Packet analyzers} or \emph{sniffers} are tools for silent interception of network traffic. In technical terms, it is software (or hardware) which passively receives all data link layer frames passing through the device’s network adapter, not just those directed towards recipient. They are generally used by hackers, while also having legitimate use by system and network administrators or security experts. Sniffing is possible due to the physical characteristic of network. Either with LAN (Local Area Network) or unencrypted WLAN (Wireless LAN), all data passing through the system are accessible to everyone. It is than a job of WLAN or LAN adapters (network cards) on the site of client to separate its part of the data using filtering based on the MAC (Media Access Control) address. A MAC address is an unique identifier of every computer's network adapter. Except simple network MAC filtering, it can be, e.g.\, also used for assigning IP address by ARP (Address Resolution Protocol) and DHCP (Dynamic Host Configuration Protocol).
+I will start with packets and packet analyzers, since they are key elements of my wireless network sonification efforts. Packets, and in this case \emph{network packets} are units of formatted data. It is basically a standard of packing a predefined amount of information into a understandable format, easily and efficiently transmittable over networks. \emph{Packet analyzers} or \emph{sniffers} are tools for silent interception of network traffic. In technical terms, it is software (or hardware) which passively receives all data link layer frames passing through the device’s network adapter, not just those directed towards recipient. They are generally used by hackers, while also having legitimate use by system and network administrators or security experts. Sniffing is possible due to the physical characteristic of network. Either with LAN (Local Area Network) or unencrypted WLAN (Wireless LAN), all data passing through the system are accessible to everyone. It is then a job of WLAN or LAN adapters (network cards) on the site of client to separate its part of the data using filtering based on the MAC (Media Access Control) address. A MAC address is an unique identifier of every computer's network adapter. Except simple network MAC filtering, it can be, e.g.\, also used for assigning IP address by ARP (Address Resolution Protocol) and DHCP (Dynamic Host Configuration Protocol).
 
 By enabling the functionality of network device called \emph{promiscuous mode}, one is able to avoid this filtering and obtain all present network packets. This is possible  for both wired and wireless adapters, thus for both wired and wireless networks. Of course, there are certain limits to this. For example when a \emph{network switch} is placed in the network, it is not possible to receive everything. Network switch, different from \emph{repeater} or \emph{hub} (device only physically `multiplying' the cable), is a more advanced device and acts as a MAC filter by itself, therefore working as a network filter by itself.~\cite{Pallavi2012}
 
@@ -198,7 +198,7 @@ Basic process of reading network data and converting them directly to sound is n
 	\texttt{\textbf{\$} tcpdump -i wlan0 -A > /dev/dsp} 
 \end{quotation}
 
-Tcpdump opens a packet capture process at a device \texttt{wlan0} (wireless module). Option \texttt{-A} represents conversion of the captured data to ASCII symbols, allowing us to always read them in the terminal as text. These are than again, streamed into \texttt{/dev/dsp} which serves as the sonifying module. This already gives us some amount of sonification of the network with just single line of code. 
+Tcpdump opens a packet capture process at a device \texttt{wlan0} (wireless module). Option \texttt{-A} represents conversion of the captured data to ASCII symbols, allowing us to always read them in the terminal as text. These are then again, streamed into \texttt{/dev/dsp} which serves as the sonifying module. This already gives us some amount of sonification of the network with just single line of code. 
 
 Next step was, to think about what other ways are there to experiment with. One of the options was change of the sample rate of the /dev/dsp (sound card) on-the-fly and thus change of the resulting sound as with the Sonodump. After some research on the topic it seemed as rather complicated and bulky approach, so I had to think of some other method. That was when I discovered \textbf{aplay}, part of ALSA. ALSA is amongst OSS and Jack one of sound systems used for audio on Linux. The most important function of aplay for me was the possibility to read data from pipeline (i.e.\ from other process) and to modify a few parameters of the reading. Great addition was fact, that it is easy to have almost unlimited amount of aplays playing at the same time, even from one source. ALSA is handling the mixing of the streams to the sound card.
 
@@ -252,7 +252,7 @@ My use was obviously less malicious, I was experimenting with the behaviors of t
 At this point I have had prepared a sufficient toolkit for my upcoming performance and installation, therefore I started to focus on the artistic aspects, nuances of the work.
 
 \subsection{Performance and Installation}
-I have performed only once with this setup. As mentioned, it was on AudioArt festival in Kraków and it has been successful, for few various reasons. My initial approach was to try to create some kind of static object in space, which would than perform \emph{for me}, as in --- instead of me. I would be sitting away from the device with laptop in my lap and I would control the process from there, over network. This has been the idea until around 4 days before the performance, when after talking with my friend I have decided to twist my plan in quite radical fashion and do a live welding of my instalation during the performance.
+I have performed only once with this setup. As mentioned, it was on AudioArt festival in Kraków and it has been successful, for few various reasons. My initial approach was to try to create some kind of static object in space, which would then perform \emph{for me}, as in --- instead of me. I would be sitting away from the device with laptop in my lap and I would control the process from there, over network. This has been the idea until around 4 days before the performance, when after talking with my friend I have decided to twist my plan in quite radical fashion and do a live welding of my instalation during the performance.
 
 To elaborate a bit more, I have always been intrigued by welding and the atmosphere it establishes. Extremely, harmfully bright lights, bursts of current through metals, high voltage buzz. Sonically, sound world of welding machine was actually quite matching to sound world of my wireless sonification software. But that was not the only reason behind the use of such different instrument. From the beginning, I aimed to build specific kind of a sculpture, and 4 days before the performance, it still was not ready. The plan for the object was to create a pyramid from metallic rods, which would serve as representation of antenna, \textit{prism for streams}. Therfore, it clicked, and I decided to built one, during the performance, with the use of the welding machine.
 
@@ -280,8 +280,8 @@ The second project is not realized yet, but connects my idea of wireless sonific
 
 \begin{figure}  
   \centering
-    \includegraphics[width=0.8\textwidth]{img/hlysnan}%
-	\caption{Hlysnan v0.1 --- reinventing the sonodump}
+    \includegraphics[width=0.95\textwidth]{img/hlysnan}%
+	\caption{Hlysnan v0.1 --- reinventing the sonodump. In this screenshot we can see the minimalistic user interface as well as a portion of the sniffed wireless data.}
 	\label{fig:hlysnan}
 \end{figure}
 
@@ -290,7 +290,7 @@ The second project is not realized yet, but connects my idea of wireless sonific
 \clearpage
 \section{City Attributes Sonification}
 
-City attributes sonification is a project that I have worked on in 2011 in the Czech Republic. At the time, I was invited to lead a workshop on topics dealing with sound, city, and architecture. The event was a part of the bigger festival dedicated to the city of Brno.
+\emph{City Attributes Sonification} is a project that I have worked on in 2011 in the Czech Republic. At the time, I was invited to lead a workshop on topics dealing with sound, city, and architecture. The event was a part of the bigger festival dedicated to the city of Brno.
 
 The festival organizers happily accepted my proposal for the exact topic --- the sonification of the city. I was very curious to see what people would come up with and it actually turned out very well!
 
@@ -397,7 +397,7 @@ For the future, I see myself starting to work on Binmatu installations as well. 
 
 During the scholastic year of 2011/2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California.
 
-At the beginning of the year, Szelag started a group called the ``Kraków Active Ensemble'', which connected various musicians from the conservatory into a unifying experience of free improvisation and graphic scores. For my part in the group, I mostly used my own software that I had programmed in Max, which I named ``JONO''. The ensemble performed at various galleries, electroacoustic events, and open jam sessions.
+At the beginning of the year, Szelag started a group called the ``Kraków Active Ensemble'', which connected various musicians from the conservatory into a unifying experience of free improvisation and graphic scores. For my part in the group, I mostly used my own software that I had programmed in Max, which I named \emph{JONO}. The ensemble performed at various galleries, electroacoustic events, and open jam sessions.
 
 In the beginning of 2012, Agnes and I decided to collaborate on a sound-based installation. We had both created work in this field before, but our projects and experiences were very different, so it would be interesting to see how things would come together.  We decided that my main role would be in dealing with the technical elements, and her role would be in working with the aesthetic and overall design concept.
 
@@ -496,7 +496,7 @@ Tactile transducers are basically moving magnetic coils (like the ones found in 
 
 This, of course, brings many interesting aspects to the newly-created sound emitter. Primarily, it is inheriting the acoustic imperfections of the object. E.g.\ a metallic plate resonates at certain frequencies and presents a long reverb (such as is found in plate reverb). I have exercised this concept greatly in my project.
 
-First, I acquired various interesting objects which were lying around the workshop of the gallery --- two metallic plates and one empty oil barrel. Then I created three different `stages', three different sound emitting objects. Two of those were connected to one amplifier and then to my computer, and one stage was totally separate from the main computer. To achieve this visual separation --- no cables running through the space. This was important to me, since I often find cables visually distracting. My goal was the element of surprise, the perception of the object as a truly autonomous sound-emitting unit. To accomplish that, I used a few different technologies that I had on hand. The sounds were generated from a Raspberry Pi microcomputer running the sound programming language Chuck. This audio was than fed to a small amplifier and finally to the object (or rather, to the transducer connected to it). For a better visualization of this concept, I have created figure~\ref{fig:sitespec}.
+First, I acquired various interesting objects which were lying around the workshop of the gallery --- two metallic plates and one empty oil barrel. Then I created three different `stages', three different sound emitting objects. Two of those were connected to one amplifier and then to my computer, and one stage was totally separate from the main computer. To achieve this visual separation --- no cables running through the space. This was important to me, since I often find cables visually distracting. My goal was the element of surprise, the perception of the object as a truly autonomous sound-emitting unit. To accomplish that, I used a few different technologies that I had on hand. The sounds were generated from a Raspberry Pi microcomputer running the sound programming language Chuck. This audio was then fed to a small amplifier and finally to the object (or rather, to the transducer connected to it). For a better visualization of this concept, I have created figure~\ref{fig:sitespec}.
 
 This solution gave me the opportunity to have total control over what was happening in the room sound-wise, without the need for a jungle of wires and multichannel sound cards. It became especially important when my work in the gallery became more focused on performing with the objects rather than creating a standalone self-sustaining installation.
 
@@ -523,13 +523,13 @@ I have actually quite enjoyed the concept of creating an installation which serv
 
 \chapter{Conclusion}
 
+\onehalfspacing
+
 \appendix
 \include{include/performances}
 \include{include/links}
-\onehalfspacing
 
 \bibliographystyle{apacite} 
 \bibliography{general}
-%\printbibliography
 
 \end{document} 
