--- a/Thesis.tex
+++ b/Thesis.tex
@@ -522,6 +522,7 @@ I have actually quite enjoyed the concept of creating an installation which serv
 \end{figure}
 
 \chapter{Conclusion}
+In conclusion...
 
 \onehalfspacing
 
