--- a/Thesis.tex
+++ b/Thesis.tex
@@ -5,25 +5,32 @@
 %\setulmarginsandblock{2cm}{2cm}{*}
 %\checkandfixthelayout
 
+
 \usepackage[utf8]{inputenc} 
+
 \usepackage{hyperref}
 \usepackage{apacite}
 \usepackage{cmap} 
 \usepackage{url}
 \usepackage[T1]{fontenc} 
 \usepackage[osf]{libertine} 
+\usepackage{libertineotf}
 \usepackage[scaled=0.90]{inconsolata}
 \usepackage[parfill]{parskip} 
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{setspace}
+\usepackage{anyfontsize}
 \onehalfspacing
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,fit,backgrounds}
 
-\title{Streams and currents:\\
-Wireless network sonification and other works} 
+
+\title{
+{\fontsize{40}{45}\selectfont Streams and currents}\\
+{\fontsize{20}{20}\selectfont Wireless Network Sonification and other works} 
+}
 
 \author{Jonáš Gruska\\
 Bachelor's Thesis\\
@@ -44,6 +51,8 @@ Institute of Sonology}
 \maketitle
 
 \begin{abstract}
+First and main topic of this thesis is a concept of sonification and its various sub-methods. It deals with few examples of the significant works from the area and it is presenting a specific division of the sonification into a scientific and an artistic world.
+Second topic is my own artistic work, which partly overlaps with sonification, but also reaches towards site-specific audio-visual installations, compositions based on a auditory illusions and the minimalistic gallery performances. 
 \end{abstract}
 \clearpage
 \setcounter{page}{3}
@@ -137,7 +146,7 @@ A specially designed device is used for the `detection', as seen on figure~\ref{
 
 These works have proven to be very effective in their directivity and immediacy. One can simply turn on the device and listen to `invisible' streams of data, constantly present and surrounding, yet unnoticed by our senses. 
 
-My wireless network sonification work is strongly related to that concept. My passion for revealing omnipresent data streams, penetrating our tissues on a daily basis is possibly very similar to what has driven Kubisch or Miyazaki to build their own sonification systems.  
+My Wireless Network Sonification work is strongly related to that concept. My passion for revealing omnipresent data streams, penetrating our tissues on a daily basis is possibly very similar to what has driven Kubisch or Miyazaki to build their own sonification systems.  
 
 But before I jump to describing my works, I want to mention one more example of sonification project: a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked this work for the inherent collision of scientific and artistic approach.
 
@@ -155,7 +164,7 @@ Hopefully, at this point I have presented sufficient amount of various works whi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-\section{Wireless network sonification}
+\section{Wireless Network Sonification}
 \label{sec:wifi}
 
 As a part of my own experimentation with untraditional sources for musical or generally sonic data I decided to extend my line of work on the layer of wireless networks. The project I would like to describe in this chapter deals with wireless network sonification as a main artistic source for sonic performance and installation. In basic terms, it catches data streams `from the air' and transforms them directly into sound using a set of tools and methods. This work has been presented as a performance and an installation. In case of performance, I have used the live coding technique to change the aspects of the sonification. This was done via purposeful tampering of the networks by creating artificial data streams as well as by modifying the parameters of sonification.
@@ -395,7 +404,7 @@ For the future, I see myself starting to work on Binmatu installations as well. 
 
 \subsection{Introduction} 
 
-During the scholastic year of 2011/2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California.
+During the scholastic year of 2011 / 2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California.
 
 At the beginning of the year, Szelag started a group called the ``Kraków Active Ensemble'', which connected various musicians from the conservatory into a unifying experience of free improvisation and graphic scores. For my part in the group, I mostly used my own software that I had programmed in Max, which I named \emph{JONO}. The ensemble performed at various galleries, electroacoustic events, and open jam sessions.
 
@@ -436,11 +445,11 @@ I really enjoyed this method of working, as well as the collaboration with an ar
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Site specific resonances}
+\section{Site Specific Resonances}
 
 \subsection{Introduction}
 
-\emph{Site specific resonances} was my latest project during the period of writing of this thesis. It was a sound installation exhibited in the Vrije Academie Gemak in The Hague.
+\emph{Site Specific Resonances} was my latest project during the period of writing of this thesis. It was a sound installation exhibited in the Vrije Academie Gemak in The Hague.
 
 The project started with my proposal to the gallery for creating a site-specific sound installation. My aim was to research a few topics close to my aesthetics --- minimalism, hidden technology, and the reusing/repurposing of materials. In the end, it turned out quite differently --- instead of creating a permanent installation, I built a special environment to perform with. 
 
@@ -516,21 +525,26 @@ I have actually quite enjoyed the concept of creating an installation which serv
 
 \begin{figure}  
   \centering
-    \includegraphics[width=0.8\textwidth]{img/sitespec}
-        \caption{Site specific resonances performance}
+    \includegraphics[width=1\textwidth]{img/sitespec}
+        \caption{Performance of ``Site Specific Resonances''}
         \label{fig:sitespec}
 \end{figure}
 
 \chapter{Conclusion}
-In conclusion...
+In conclusion, I believe that I have managed to give you a glimpse of my views on sonification and its current status in the artistic, as well as the scientific universe. I provided a few clear examples of what the artistic sonification is and might be. I am hoping to see more and more collaborations of arts and sciences, which might help us to understand difficult concepts; but I also hope to see more uses of purely artistic sonification, which I have fallen in love with over my last few years. I want to hear the inner workings of the machines which surround us on daily basis. To hear the invisible data streams transmitting infinite amounts of data through our tissues. To hear an to listen, to learn and to improve, to experience non-auditory aspects of our world through eardrum oscillations, and the wonderful apparatus hidden behind them.
+
+My future plans are still very misty, but I feel like I do not want to sink completely into the technology. By itself it is delightful, but not powerful enough. It is the combination of my artworks, which is supposed to bring them to life, bring the life to the electrons in their tangled conductive veins. It is not an easy task to stay in the mindset of an artist and an engineer at the same time. But I will try, jump through, and hoping not fall far from concepts just for the superficial beauty of circuit boards and code. I want to remain an artist in a first place, and I hope the descriptions of my latest projects have not proved me differently. 
+
+The shift over last 4 years has turned me from the extremely fast and dense compositions to the psychedelic minimalism, yet I do not think of it as of the evolution. I would say it is my inner need for change, change of the environments, approaches, the experiment. There is no better stage, just different. It is the same driving force, which led me from repairing old bicycles to picking locks, through hacking wireless networks to designing hardware electronics. I do not want to stay at one place and recycle myself, I need to explore and dive into new realms. That is the only way for me to reach new levels of understanding world and thus creating more and precise, powerful art.
 
 \onehalfspacing
+
+\bibliographystyle{apacite} 
+\bibliography{general}
 
 \appendix
 \include{include/performances}
 \include{include/links}
 
-\bibliographystyle{apacite} 
-\bibliography{general}
 
 \end{document} 
