--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,14 +22,16 @@
 \usepackage{float}
 \usepackage{setspace}
 \usepackage{anyfontsize}
+\usepackage{xcolor}
+\definecolor{red}{HTML}{AD1737}
 \onehalfspacing
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,fit,backgrounds}
 
 
 \title{
-{\fontsize{40}{45}\selectfont Streams and currents}\\
-{\fontsize{20}{20}\selectfont Wireless Network Sonification and other works} 
+{\fontsize{37}{42}\selectfont \color{red}\sc{Streams and currents}}\\
+{\fontsize{15}{15}\selectfont \emph{Wireless Network Sonification and other works}} 
 }
 
 \author{Jonáš Gruska\\
@@ -59,7 +61,7 @@ Second topic is my own artistic work, which partly overlaps with sonification, b
 
 
 \chapter*{Acknowledgements}
-I would like to thank my parents for supporting me during my studies. I would never be able to learn what I love without them. And of course, I would like to thank my mentor Paul Berg for his patience with my chaotic behavior and the whole Institute of Sonology for helping me to become who I want to be. Lastly, I would like to thank Janka Kobolková, Marko Uzunovski, Xavier De Wannemaeker, Maya Verlaak, Daniel Tóth, Peter Sych, Marek Chołoniewski and all my other friends in supporting me in my work, inspiring and pushing me forward. My special thanks go to Marek Slobodník, Norman Teale and Agnes Szelang for helping me with my language.
+I would like to thank my parents for supporting me during my studies. I would never be able to learn what I love without them. And of course, I would like to thank my mentor Paul Berg for his patience with my chaotic behavior and the whole Institute of Sonology for helping me to become who I want to be. Lastly, I would like to thank Janka Kobolková, Marko Uzunovski, Xavier De \mbox{Wannemaeker}, Maya Verlaak, Daniel Tóth, Peter Sych, Marek Chołoniewski and all my other friends in supporting me in my work, inspiring and pushing me forward. My special thanks go to Marek Slobodník, Norman Teale and Agnes Szelang for helping me with my language.
 
 \setcounter{tocdepth}{1}
 \tableofcontents
@@ -496,7 +498,7 @@ It is important to mention that I decided (as part of the minimalist aesthetics)
                         \end{scope}
 
         \end{tikzpicture}
-        \caption{System of \emph{Site specific resonances} installation}
+        \caption{System of \emph{Site Specific Resonances} installation}
         \label{fig:sitespec}
 \end{figure}
 
