--- a/Thesis.tex
+++ b/Thesis.tex
@@ -30,7 +30,7 @@
 
 
 \title{
-{\fontsize{37}{42}\selectfont \color{red}\sc{Streams and currents}}\\
+{\fontsize{43}{30}\selectfont \color{red}\sc{Streams~\&~Currents}}\\
 {\fontsize{15}{15}\selectfont \emph{Wireless Network Sonification and other works}} 
 }
 
@@ -38,7 +38,7 @@
 Bachelor's Thesis\\
 Institute of Sonology} 
 
-\date{\today}
+\date{}
 
 \begin{document}
 
